--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,12 @@
 spring:
   application:
     name: ping-ai-code-generation-backend
+# mysql
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/ping_ai_code_generation
+    username: root
+    password: 123456
 server:
   port: 8123
   servlet:
@@ -15,3 +21,4 @@ knife4j:
   enable: true
   setting:
     language: zh_cn
+
