--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,7 @@
             <artifactId>hutool-all</artifactId>
             <version>5.8.38</version>
         </dependency>
-        <!-- 注意引用Springboot 3 版本-->
+        <!-- knife4j-注意引用Springboot 3 版本-->
         <dependency>
             <groupId>com.github.xiaoymin</groupId>
             <artifactId>knife4j-openapi3-jakarta-spring-boot-starter
